Integrasikan metode hybrid contextual embedding-SVM

--- a/Sentiment_Analysis_A_Business_Proposal_SVM.ipynb
+++ b/Sentiment_Analysis_A_Business_Proposal_SVM.ipynb
@@ -2275,6 +2275,124 @@
     "\n",
     "Ke depan, kualitas masih bisa ditingkatkan dengan dua pendekatan utama. Pertama, pertimbangkan skema pelabelan ulang secara manual atau melibatkan ahli linguistik—label otomatis kadang ambigu, dan koreksi manusia dapat mengurangi noise sehingga model belajar dari data yang benar-benar representatif. Kedua, eksplorasi algoritma selain SVM seperti Random Forest, XGBoost, atau model berbasis transformer (mis. IndoBERT) yang sering memberi akurasi lebih tinggi pada teks bahasa Indonesia."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# METODE HYBRID CONTEXTUAL EMBEDDING + SVM\n",
+    "Pendekatan hybrid ini menggabungkan **embedding kontekstual IndoBERT** (menangkap konteks kalimat) dengan **fitur TF-IDF karakter** (menangkap pola ejaan/slang), lalu keduanya diklasifikasikan menggunakan SVM linear."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ── 0. Instalasi (jalankan sekali bila belum ada) ──────────────────────────────\n",
+    "# !pip install -q transformers torch scikit-learn imbalanced-learn\n",
+    "\n",
+    "# ── 1. Library ────────────────────────────────────────────────────────────────\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import torch\n",
+    "from transformers import AutoTokenizer, AutoModel\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.svm import LinearSVC\n",
+    "from sklearn.metrics import classification_report, accuracy_score\n",
+    "from scipy.sparse import hstack, csr_matrix\n",
+    "\n",
+    "# ── 2. Load data berlabel ─────────────────────────────────────────────────────\n",
+    "df = pd.read_csv(\"review_remake_indo_labeled.csv\")\n",
+    "\n",
+    "df = df.dropna(subset=[\"Review\", \"Sentimen\"]).copy()\n",
+    "X_text = df[\"Review\"].astype(str).str.strip()\n",
+    "y = df[\"Sentimen\"].astype(str).str.lower().str.strip()\n",
+    "\n",
+    "# ── 3. Split data ─────────────────────────────────────────────────────────────\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X_text,\n",
+    "    y,\n",
+    "    test_size=0.2,\n",
+    "    random_state=42,\n",
+    "    stratify=y\n",
+    ")\n",
+    "\n",
+    "# ── 4. Encoder embedding kontekstual (IndoBERT) ──────────────────────────────\n",
+    "MODEL_NAME = \"indobenchmark/indobert-base-p1\"\n",
+    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "\n",
+    "tokenizer = AutoTokenizer.from_pretrained(MODEL_NAME)\n",
+    "model = AutoModel.from_pretrained(MODEL_NAME).to(device)\n",
+    "model.eval()\n",
+    "\n",
+    "def encode_texts(texts, batch_size=16, max_length=128):\n",
+    "    \"\"\"Menghasilkan mean pooled contextual embedding untuk setiap teks.\"\"\"\n",
+    "    all_embeddings = []\n",
+    "\n",
+    "    with torch.no_grad():\n",
+    "        for i in range(0, len(texts), batch_size):\n",
+    "            batch = texts[i:i+batch_size]\n",
+    "            encoded = tokenizer(\n",
+    "                batch,\n",
+    "                padding=True,\n",
+    "                truncation=True,\n",
+    "                max_length=max_length,\n",
+    "                return_tensors=\"pt\"\n",
+    "            ).to(device)\n",
+    "\n",
+    "            outputs = model(**encoded)\n",
+    "            last_hidden = outputs.last_hidden_state\n",
+    "            attention_mask = encoded[\"attention_mask\"].unsqueeze(-1)\n",
+    "\n",
+    "            masked_hidden = last_hidden * attention_mask\n",
+    "            sum_hidden = masked_hidden.sum(dim=1)\n",
+    "            token_count = attention_mask.sum(dim=1).clamp(min=1)\n",
+    "            mean_pooled = sum_hidden / token_count\n",
+    "\n",
+    "            all_embeddings.append(mean_pooled.cpu().numpy())\n",
+    "\n",
+    "    return np.vstack(all_embeddings)\n",
+    "\n",
+    "X_train_ctx = encode_texts(X_train.tolist())\n",
+    "X_test_ctx = encode_texts(X_test.tolist())\n",
+    "\n",
+    "# ── 5. Fitur lexical (TF-IDF karakter) ───────────────────────────────────────\n",
+    "char_tfidf = TfidfVectorizer(analyzer=\"char_wb\", ngram_range=(3, 5), min_df=2)\n",
+    "X_train_char = char_tfidf.fit_transform(X_train)\n",
+    "X_test_char = char_tfidf.transform(X_test)\n",
+    "\n",
+    "# ── 6. Hybrid fusion: [contextual embedding + TF-IDF] ────────────────────────\n",
+    "X_train_hybrid = hstack([\n",
+    "    csr_matrix(X_train_ctx),\n",
+    "    X_train_char\n",
+    "], format=\"csr\")\n",
+    "\n",
+    "X_test_hybrid = hstack([\n",
+    "    csr_matrix(X_test_ctx),\n",
+    "    X_test_char\n",
+    "], format=\"csr\")\n",
+    "\n",
+    "# ── 7. Classifier SVM ─────────────────────────────────────────────────────────\n",
+    "hybrid_svm = Pipeline([\n",
+    "    (\"scaler\", StandardScaler(with_mean=False)),\n",
+    "    (\"svm\", LinearSVC(C=1.0, class_weight=\"balanced\", random_state=42, max_iter=10000))\n",
+    "])\n",
+    "\n",
+    "hybrid_svm.fit(X_train_hybrid, y_train)\n",
+    "y_pred = hybrid_svm.predict(X_test_hybrid)\n",
+    "\n",
+    "print(\"Akurasi Hybrid Contextual Embedding + SVM:\", round(accuracy_score(y_test, y_pred), 4))\n",
+    "print(\"\n",
+    "Classification Report:\n",
+    "\")\n",
+    "print(classification_report(y_test, y_pred, digits=4))\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
