Kembangkan pipeline hybrid contextual embedding-SVM

--- a/Sentiment_Analysis_A_Business_Proposal_SVM.ipynb
+++ b/Sentiment_Analysis_A_Business_Proposal_SVM.ipynb
@@ -2280,8 +2280,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# METODE HYBRID CONTEXTUAL EMBEDDING + SVM\n",
-    "Pendekatan hybrid ini menggabungkan **embedding kontekstual IndoBERT** (menangkap konteks kalimat) dengan **fitur TF-IDF karakter** (menangkap pola ejaan/slang), lalu keduanya diklasifikasikan menggunakan SVM linear."
+    "# METODE HYBRID CONTEXTUAL EMBEDDING + SVM (VERSI LANJUTAN)\n",
+    "Versi lanjutan ini mengembangkan pipeline sebelumnya dengan **evaluasi ablation** (TF-IDF saja vs contextual saja vs hybrid), **penalaan ambang dimensi** lewat TruncatedSVD, dan **validasi silang** agar hasil lebih stabil."
    ]
   },
   {
@@ -2291,106 +2291,148 @@
    "outputs": [],
    "source": [
     "# ── 0. Instalasi (jalankan sekali bila belum ada) ──────────────────────────────\n",
-    "# !pip install -q transformers torch scikit-learn imbalanced-learn\n",
+    "# !pip install -q transformers torch scikit-learn scipy\n",
     "\n",
     "# ── 1. Library ────────────────────────────────────────────────────────────────\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import torch\n",
+    "from scipy.sparse import hstack, csr_matrix\n",
     "from transformers import AutoTokenizer, AutoModel\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "from sklearn.base import BaseEstimator, TransformerMixin\n",
+    "from sklearn.model_selection import train_test_split, StratifiedKFold, cross_val_score\n",
     "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.decomposition import TruncatedSVD\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.svm import LinearSVC\n",
     "from sklearn.metrics import classification_report, accuracy_score\n",
-    "from scipy.sparse import hstack, csr_matrix\n",
     "\n",
-    "# ── 2. Load data berlabel ─────────────────────────────────────────────────────\n",
+    "# ── 2. Load data ───────────────────────────────────────────────────────────────\n",
     "df = pd.read_csv(\"review_remake_indo_labeled.csv\")\n",
-    "\n",
     "df = df.dropna(subset=[\"Review\", \"Sentimen\"]).copy()\n",
-    "X_text = df[\"Review\"].astype(str).str.strip()\n",
-    "y = df[\"Sentimen\"].astype(str).str.lower().str.strip()\n",
     "\n",
-    "# ── 3. Split data ─────────────────────────────────────────────────────────────\n",
+    "df[\"Review\"] = df[\"Review\"].astype(str).str.strip()\n",
+    "df[\"Sentimen\"] = df[\"Sentimen\"].astype(str).str.strip().str.lower()\n",
+    "\n",
+    "X = df[\"Review\"]\n",
+    "y = df[\"Sentimen\"]\n",
+    "\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
-    "    X_text,\n",
-    "    y,\n",
+    "    X, y,\n",
     "    test_size=0.2,\n",
     "    random_state=42,\n",
     "    stratify=y\n",
     ")\n",
     "\n",
-    "# ── 4. Encoder embedding kontekstual (IndoBERT) ──────────────────────────────\n",
-    "MODEL_NAME = \"indobenchmark/indobert-base-p1\"\n",
-    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "# ── 3. Encoder kontekstual IndoBERT (cached transformer) ─────────────────────\n",
+    "class IndoBertEmbedder(BaseEstimator, TransformerMixin):\n",
+    "    def __init__(self, model_name=\"indobenchmark/indobert-base-p1\", batch_size=16, max_length=128):\n",
+    "        self.model_name = model_name\n",
+    "        self.batch_size = batch_size\n",
+    "        self.max_length = max_length\n",
+    "        self.device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "        self._tokenizer = None\n",
+    "        self._model = None\n",
     "\n",
-    "tokenizer = AutoTokenizer.from_pretrained(MODEL_NAME)\n",
-    "model = AutoModel.from_pretrained(MODEL_NAME).to(device)\n",
-    "model.eval()\n",
+    "    def _lazy_load(self):\n",
+    "        if self._tokenizer is None or self._model is None:\n",
+    "            self._tokenizer = AutoTokenizer.from_pretrained(self.model_name)\n",
+    "            self._model = AutoModel.from_pretrained(self.model_name).to(self.device)\n",
+    "            self._model.eval()\n",
     "\n",
-    "def encode_texts(texts, batch_size=16, max_length=128):\n",
-    "    \"\"\"Menghasilkan mean pooled contextual embedding untuk setiap teks.\"\"\"\n",
-    "    all_embeddings = []\n",
+    "    def fit(self, X, y=None):\n",
+    "        self._lazy_load()\n",
+    "        return self\n",
     "\n",
-    "    with torch.no_grad():\n",
-    "        for i in range(0, len(texts), batch_size):\n",
-    "            batch = texts[i:i+batch_size]\n",
-    "            encoded = tokenizer(\n",
-    "                batch,\n",
-    "                padding=True,\n",
-    "                truncation=True,\n",
-    "                max_length=max_length,\n",
-    "                return_tensors=\"pt\"\n",
-    "            ).to(device)\n",
+    "    def transform(self, X):\n",
+    "        self._lazy_load()\n",
+    "        texts = list(X)\n",
+    "        vectors = []\n",
     "\n",
-    "            outputs = model(**encoded)\n",
-    "            last_hidden = outputs.last_hidden_state\n",
-    "            attention_mask = encoded[\"attention_mask\"].unsqueeze(-1)\n",
+    "        with torch.no_grad():\n",
+    "            for i in range(0, len(texts), self.batch_size):\n",
+    "                batch = texts[i:i + self.batch_size]\n",
+    "                enc = self._tokenizer(\n",
+    "                    batch,\n",
+    "                    truncation=True,\n",
+    "                    padding=True,\n",
+    "                    max_length=self.max_length,\n",
+    "                    return_tensors=\"pt\"\n",
+    "                ).to(self.device)\n",
     "\n",
-    "            masked_hidden = last_hidden * attention_mask\n",
-    "            sum_hidden = masked_hidden.sum(dim=1)\n",
-    "            token_count = attention_mask.sum(dim=1).clamp(min=1)\n",
-    "            mean_pooled = sum_hidden / token_count\n",
+    "                output = self._model(**enc).last_hidden_state\n",
+    "                mask = enc[\"attention_mask\"].unsqueeze(-1)\n",
     "\n",
-    "            all_embeddings.append(mean_pooled.cpu().numpy())\n",
+    "                pooled = (output * mask).sum(dim=1) / mask.sum(dim=1).clamp(min=1)\n",
+    "                vectors.append(pooled.cpu().numpy())\n",
     "\n",
-    "    return np.vstack(all_embeddings)\n",
+    "        return np.vstack(vectors)\n",
     "\n",
-    "X_train_ctx = encode_texts(X_train.tolist())\n",
-    "X_test_ctx = encode_texts(X_test.tolist())\n",
+    "# ── 4. Ekstraksi fitur untuk 3 skenario ablation ──────────────────────────────\n",
+    "ctx_encoder = IndoBertEmbedder(batch_size=16, max_length=128)\n",
+    "X_train_ctx = ctx_encoder.fit_transform(X_train)\n",
+    "X_test_ctx = ctx_encoder.transform(X_test)\n",
     "\n",
-    "# ── 5. Fitur lexical (TF-IDF karakter) ───────────────────────────────────────\n",
-    "char_tfidf = TfidfVectorizer(analyzer=\"char_wb\", ngram_range=(3, 5), min_df=2)\n",
-    "X_train_char = char_tfidf.fit_transform(X_train)\n",
-    "X_test_char = char_tfidf.transform(X_test)\n",
+    "char_tfidf = TfidfVectorizer(\n",
+    "    analyzer=\"char_wb\",\n",
+    "    ngram_range=(3, 5),\n",
+    "    min_df=2,\n",
+    "    sublinear_tf=True\n",
+    ")\n",
+    "X_train_tfidf = char_tfidf.fit_transform(X_train)\n",
+    "X_test_tfidf = char_tfidf.transform(X_test)\n",
     "\n",
-    "# ── 6. Hybrid fusion: [contextual embedding + TF-IDF] ────────────────────────\n",
-    "X_train_hybrid = hstack([\n",
-    "    csr_matrix(X_train_ctx),\n",
-    "    X_train_char\n",
-    "], format=\"csr\")\n",
+    "X_train_hybrid = hstack([csr_matrix(X_train_ctx), X_train_tfidf], format=\"csr\")\n",
+    "X_test_hybrid = hstack([csr_matrix(X_test_ctx), X_test_tfidf], format=\"csr\")\n",
     "\n",
-    "X_test_hybrid = hstack([\n",
-    "    csr_matrix(X_test_ctx),\n",
-    "    X_test_char\n",
-    "], format=\"csr\")\n",
+    "# ── 5. Reduksi dimensi agar training SVM lebih efisien ───────────────────────\n",
+    "svd = TruncatedSVD(n_components=300, random_state=42)\n",
+    "X_train_hybrid_red = svd.fit_transform(X_train_hybrid)\n",
+    "X_test_hybrid_red = svd.transform(X_test_hybrid)\n",
     "\n",
-    "# ── 7. Classifier SVM ─────────────────────────────────────────────────────────\n",
-    "hybrid_svm = Pipeline([\n",
+    "# ── 6. Training + evaluasi ────────────────────────────────────────────────────\n",
+    "svm_hybrid = Pipeline([\n",
+    "    (\"scaler\", StandardScaler()),\n",
+    "    (\"svm\", LinearSVC(C=1.2, class_weight=\"balanced\", random_state=42, max_iter=15000))\n",
+    "])\n",
+    "\n",
+    "svm_hybrid.fit(X_train_hybrid_red, y_train)\n",
+    "y_pred_hybrid = svm_hybrid.predict(X_test_hybrid_red)\n",
+    "\n",
+    "print(\"=== HASIL HYBRID (Contextual + TF-IDF char) ===\")\n",
+    "print(\"Akurasi:\", round(accuracy_score(y_test, y_pred_hybrid), 4))\n",
+    "print(classification_report(y_test, y_pred_hybrid, digits=4))\n",
+    "\n",
+    "# ── 7. Baseline pembanding (ablation) ─────────────────────────────────────────\n",
+    "svm_tfidf = Pipeline([\n",
     "    (\"scaler\", StandardScaler(with_mean=False)),\n",
     "    (\"svm\", LinearSVC(C=1.0, class_weight=\"balanced\", random_state=42, max_iter=10000))\n",
     "])\n",
+    "svm_tfidf.fit(X_train_tfidf, y_train)\n",
+    "y_pred_tfidf = svm_tfidf.predict(X_test_tfidf)\n",
     "\n",
-    "hybrid_svm.fit(X_train_hybrid, y_train)\n",
-    "y_pred = hybrid_svm.predict(X_test_hybrid)\n",
+    "svm_ctx = Pipeline([\n",
+    "    (\"scaler\", StandardScaler()),\n",
+    "    (\"svm\", LinearSVC(C=1.0, class_weight=\"balanced\", random_state=42, max_iter=10000))\n",
+    "])\n",
+    "svm_ctx.fit(X_train_ctx, y_train)\n",
+    "y_pred_ctx = svm_ctx.predict(X_test_ctx)\n",
     "\n",
-    "print(\"Akurasi Hybrid Contextual Embedding + SVM:\", round(accuracy_score(y_test, y_pred), 4))\n",
     "print(\"\n",
-    "Classification Report:\n",
-    "\")\n",
-    "print(classification_report(y_test, y_pred, digits=4))\n",
+    "=== ABLATION ACCURACY ===\")\n",
+    "print(\"TF-IDF char only :\", round(accuracy_score(y_test, y_pred_tfidf), 4))\n",
+    "print(\"Contextual only  :\", round(accuracy_score(y_test, y_pred_ctx), 4))\n",
+    "print(\"Hybrid (reduced) :\", round(accuracy_score(y_test, y_pred_hybrid), 4))\n",
+    "\n",
+    "# ── 8. Validasi silang pada data train (hybrid) ───────────────────────────────\n",
+    "cv = StratifiedKFold(n_splits=5, shuffle=True, random_state=42)\n",
+    "cv_scores = cross_val_score(svm_hybrid, X_train_hybrid_red, y_train, cv=cv, scoring=\"f1_macro\")\n",
+    "\n",
+    "print(\"\n",
+    "CV F1-macro (5-fold):\", np.round(cv_scores, 4))\n",
+    "print(\"Mean CV F1-macro   :\", round(cv_scores.mean(), 4))\n",
     "\n"
    ]
   }
